Fix #489 "Itemset dialog grows vertically, which prevents entering large itemsets"
Not a perfect solution, but better than see the dialog grow too tall.

--- a/src/resources/forms/orbeon/builder/resources/form-builder.less
+++ b/src/resources/forms/orbeon/builder/resources/form-builder.less
@@ -209,6 +209,13 @@ div.xbl-fr-grid {
 .fb-itemset-editor-dialog {
     width: 35em;
 
+    .xbl-fr-grid {
+        height: 30em;
+        overflow-y: auto;
+        padding: 0;
+        table { background-color: white; }
+    }
+
     .fr-grid-2-columns .xforms-input input { width: 13em }
     .xbl-fr-link-select1 { margin-bottom: .5em; float: right }
     .xbl-fr-link-select1 .xforms-label { display: none }
